tests/ui/option_required.stderr
error: proc-macro derive panicked
  --> $DIR/option_required.rs:11:10
   |
11 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: required is meaningless for Option
